tests/e2e/pass/m47_bounds_string.ep
# EXIT: 1
# STDOUT: Epic runtime error: index out of bounds
fun main(): void {
    let text = "abc"
    let value = text[-1]
    print(itoa(value))
}
