tests/e2e/fail/ptr_subscript.ep
# COMPILE_ERROR: type ptr is not subscriptable
fun main(): void {
    let text = "abc"
    let pointer = text.data
    print(itoa(pointer[0]))
}
